--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@mozilla/readability": "github:mozilla/readability",
+    "draft-js": "^0.11.7",
+    "draft-js-import-html": "^1.4.1",
+    "html-to-draftjs": "^1.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
