--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@mozilla/readability": "github:mozilla/readability",
+    "bootstrap": "^5.3.3",
     "draft-js": "^0.11.7",
     "draft-js-import-html": "^1.4.1",
     "html-to-draftjs": "^1.5.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0"
   },
